HelloUltraviolet/Fixtures/RejectedSource/Keys/ConflictDetectionDiagnostic/Expected.uv
//! Expected diagnostic metadata for the ConflictDetectionDiagnostic rejected-source specimen.

expectedDiagnostic("E-CON-0060", "diagnostics.19.ConflictDetection")
